syntax = "proto3";

package test.data.messagesamples;

message OneofContainer {
	string someOtherField = 1;
    oneof oneofField {
        SomeMessage someMessage = 2;
        string str = 3;
        int32 i = 4;
    }
    string someOtherField2 = 5;
}

message SomeMessage {
    string field1 = 1;
    string field2 = 2;
}
